--- a/fundUI/package.json
+++ b/fundUI/package.json
@@ -23,8 +23,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
-    "recharts": "^2.0.9",
-    "victory": "^35.5.0"
+    "recharts": "^2.0.9"
   },
   "dependencies_backup": {
     "react": "^17.0.2",
